style: fixed pagination range wrong margins

--- a/projects/ngx-easy-table/assets/style.scss
+++ b/projects/ngx-easy-table/assets/style.scss
@@ -272,8 +272,7 @@ $primary-color: #50596c !default;
     }
 
     &-range-dropdown {
-      margin-top: 10px;
-      margin-right: 3px;
+      margin-top: 8px;
     }
 
     &-range-dropdown-button-item {
